deploy: 1d50d42cd70dfad35842df7568f54ab7990bc632

--- a/existing_mnemonic.html
+++ b/existing_mnemonic.html
@@ -146,7 +146,7 @@
                         <h1 id="existing-mnemonic"><a class="header" href="#existing-mnemonic">existing-mnemonic</a></h1>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Uses an existing BIP-39 mnemonic phrase for key generation.</p>
-<h2 id="arguments"><a class="header" href="#arguments">Arguments</a></h2>
+<h2 id="optional-arguments"><a class="header" href="#optional-arguments">Optional Arguments</a></h2>
 <ul>
 <li>
 <p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc...</p>
