--- a/generate_bls_to_execution_change.html
+++ b/generate_bls_to_execution_change.html
@@ -146,7 +146,7 @@
                         <h1 id="generate-bls-to-execution-change"><a class="header" href="#generate-bls-to-execution-change">generate-bls-to-execution-change</a></h1>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Generates a BLS to execution address change message.</p>
-<h2 id="arguments"><a class="header" href="#arguments">Arguments</a></h2>
+<h2 id="optional-arguments"><a class="header" href="#optional-arguments">Optional Arguments</a></h2>
 <ul>
 <li>
 <p><strong><code>--bls_to_execution_changes_folder</code></strong>: The path to store the change JSON file.</p>
