--- a/exit_transaction_keystore.html
+++ b/exit_transaction_keystore.html
@@ -146,7 +146,7 @@
                         <h1 id="exit-transaction-keystore"><a class="header" href="#exit-transaction-keystore">exit-transaction-keystore</a></h1>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Creates an exit transaction using a keystore file.</p>
-<h2 id="arguments"><a class="header" href="#arguments">Arguments</a></h2>
+<h2 id="optional-arguments"><a class="header" href="#optional-arguments">Optional Arguments</a></h2>
 <ul>
 <li>
 <p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
