--- a/landing.html
+++ b/landing.html
@@ -161,6 +161,22 @@
 </ul>
 <h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
 <p>If you want to start creating validator keys, please follow the <a href="quick_setup.html">Quick Setup Instructions</a> or if you would like to run locally, view the <a href="local_development.html">Local Development Instructions</a>.</p>
+<p>The general usage of the CLI is:</p>
+<pre><code class="language-sh">./deposit [OPTIONS] COMMAND [ARGS]
+</code></pre>
+<h2 id="command-options"><a class="header" href="#command-options">Command Options</a></h2>
+<p>Each CLI command has a number of command options that can be provided:</p>
+<ul>
+<li>
+<p><strong>--language</strong>: The language you wish to use the CLI in. Options: العربية, ελληνικά, English, Français, Bahasa melayu, Italiano, 日本語, 한국어, Português do Brasil, român, 简体中文. Default to English.</p>
+</li>
+<li>
+<p><strong>--non_interactive</strong>: Run CLI in non-interactive mode. This will skip all confirmation and internet connectivity checks.</p>
+</li>
+<li>
+<p><strong>--ignore_connectivity</strong>: Skip internet connectivity check and warning.</p>
+</li>
+</ul>
 <h2 id="commands"><a class="header" href="#commands">Commands</a></h2>
 <p><strong>You are not required to specify each argument when executing the command. We will prompt you for each argument for security purposes.</strong></p>
 <p>If there is a specific command you would like to understand more, please choose from the following list:</p>
