--- a/new_mnemonic.html
+++ b/new_mnemonic.html
@@ -146,7 +146,7 @@
                         <h1 id="new-mnemonic"><a class="header" href="#new-mnemonic">new-mnemonic</a></h1>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Generates a new BIP-39 mnemonic along with validator keystore and deposit files depending on how many validators you wish to create.</p>
-<h2 id="arguments"><a class="header" href="#arguments">Arguments</a></h2>
+<h2 id="optional-arguments"><a class="header" href="#optional-arguments">Optional Arguments</a></h2>
 <ul>
 <li>
 <p><strong><code>--mnemonic_language</code></strong>: The language of the BIP-39 mnemonic. Options are: 'chinese_simplified', 'chinese_traditional', 'czech', 'english', 'french', 'italian', 'japanese', 'korean', 'portuguese', 'spanish'.</p>
