--- a/quick_setup.html
+++ b/quick_setup.html
@@ -185,6 +185,7 @@
 <li>You should see <code>Good signature from &quot;EDC Security &lt;edc-security@ethstaker.cc&gt;&quot;</code> in the output <strong>otherwise do not continue</strong>.</li>
 </ol>
 <h2 id="step-3-usage"><a class="header" href="#step-3-usage">Step 3: Usage</a></h2>
+<p><strong>Windows users:</strong> You should replace <code>./deposit</code> with <code>deposit.exe</code> to run properly.</p>
 <p><strong>MacOS users:</strong> In order to run from the terminal, you must first open the file to bypass MacOS code signing issues. Do so by right clicking the <code>deposit</code> file and then selecting <code>Open</code>.</p>
 <p>Determine which command best suites what you would like to accomplish:</p>
 <ul>
