deploy: b02044bfc837f787c603097140bf8ba86244c1ba

--- a/print.html
+++ b/print.html
@@ -169,13 +169,13 @@
 <p>Each CLI command has a number of command options that can be provided:</p>
 <ul>
 <li>
-<p><strong>--language</strong>: The language you wish to use the CLI in. Options: العربية, ελληνικά, English, Français, Bahasa melayu, Italiano, 日本語, 한국어, Português do Brasil, român, 简体中文. Default to English.</p>
+<p><strong><code>--language</code></strong>: The language you wish to use the CLI in. Options: العربية, ελληνικά, English, Français, Bahasa melayu, Italiano, 日本語, 한국어, Português do Brasil, român, 简体中文. Default to English.</p>
 </li>
 <li>
-<p><strong>--non_interactive</strong>: Run CLI in non-interactive mode. This will skip all confirmation and internet connectivity checks.</p>
+<p><strong><code>--non_interactive</code></strong>: Run CLI in non-interactive mode. This will skip all confirmation and internet connectivity checks.</p>
 </li>
 <li>
-<p><strong>--ignore_connectivity</strong>: Skip internet connectivity check and warning.</p>
+<p><strong><code>--ignore_connectivity</code></strong>: Skip internet connectivity check and warning.</p>
 </li>
 </ul>
 <h2 id="commands"><a class="header" href="#commands">Commands</a></h2>
