--- a/exit_transaction_keystore.html
+++ b/exit_transaction_keystore.html
@@ -144,6 +144,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="exit-transaction-keystore"><a class="header" href="#exit-transaction-keystore">exit-transaction-keystore</a></h1>
+<div class="warning">
+Including sensitive arguments when executing CLI commands poses a security risk, as these values can be accessible through disk and shell history. This exposure can allow other users, including admins and malicious actors, to gain access to sensitive information, putting your funds at risk.
+</div>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Creates an exit transaction using a keystore file.</p>
 <h2 id="optional-arguments"><a class="header" href="#optional-arguments">Optional Arguments</a></h2>
@@ -155,7 +158,7 @@
 <p><strong><code>--keystore</code></strong>: The keystore file associating with the validator you wish to exit.</p>
 </li>
 <li>
-<p><strong><code>--keystore_password</code></strong>: The password that is used to encrypt the provided keystore. Note: It's not your mnemonic password.</p>
+<p><strong><code>--keystore_password</code></strong>: The password that is used to encrypt the provided keystore. Note: It's not your mnemonic password. <span class="warning"></span></p>
 </li>
 <li>
 <p><strong><code>--validator_index</code></strong>: The validator index corresponding to the provided keystore.</p>
