--- a/exit_transaction_mnemonic.html
+++ b/exit_transaction_mnemonic.html
@@ -144,6 +144,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="exit-transaction-mnemonic"><a class="header" href="#exit-transaction-mnemonic">exit-transaction-mnemonic</a></h1>
+<div class="warning">
+Including sensitive arguments when executing CLI commands poses a security risk, as these values can be accessible through disk and shell history. This exposure can allow other users, including admins and malicious actors, to gain access to sensitive information, putting your funds at risk.
+</div>
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Creates an exit transaction using a mnemonic phrase.</p>
 <h2 id="optional-arguments"><a class="header" href="#optional-arguments">Optional Arguments</a></h2>
@@ -152,10 +155,10 @@
 <p><strong><code>--chain</code></strong>: The chain to use for generating the deposit data. Options are: 'mainnet', 'holesky', etc.</p>
 </li>
 <li>
-<p><strong><code>--mnemonic</code></strong>: The mnemonic you used during key generation.</p>
+<p><strong><code>--mnemonic</code></strong>: The mnemonic you used during key generation. <span class="warning"></span></p>
 </li>
 <li>
-<p><strong><code>--mnemonic_password</code></strong>: The mnemonic password you used in your key generation. Note: It's not the keystore password.</p>
+<p><strong><code>--mnemonic_password</code></strong>: The mnemonic password you used in your key generation. Note: It's not the keystore password. <span class="warning"></span></p>
 </li>
 <li>
 <p><strong><code>--validator_start_index</code></strong>: The index position for the keys to start generating keystores in <a href="https://eips.ethereum.org/EIPS/eip-2334#eth2-specific-parameters">ERC-2334 format</a> format.</p>
